# idss_web_app

./: .gitignore  .vercelignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  start.sh
api/: index.py
backend-bun/: .gitignore  build-vercel.sh  package.json  vercel.json
backend-bun/api/: [[...slug]].ts  index.ts
backend-bun/data/: calibration_metrics_v4.json  cost_analysis_v4.json  ml_metrics_v4.json  mlp_scaler.json  mlp_v4_config.json  mlp_weights.json  pipeline_maps.json  shap_comparison_v4.json  shap_values.json
backend-bun/src/: app.ts  data-loader.ts  feature-engineering.ts  features.ts  index.ts  mlp-predict.ts  xgboost-predict.ts
backend/app/: config.py  entry.py  main.py  minimal.py
backend/scripts/: convert_mlp_to_onnx.py  convert_xgb_to_onnx.py  export_artifacts.py  export_mlp_weights.py
data/processed/: augmentation_report.json  customer_late_rate_map.pkl  feature_config.json  frequency_encoding_maps.pkl  label_encoders.pkl  split_instability_results.csv  split_instability_summary.csv  target_encoding_maps.pkl  test.csv  val.csv  winsor_bounds.pkl
frontend/: package-lock.json  package.json
models/: computational_cost_v4.json  dl_metrics_v3.json  feature_importance_v4.json  ml_dl_comparison_v3.csv  mlp_shap_values_v4.pkl  mlp_v4.onnx  mlp_v4.onnx.data  mlp_v4.pt  mlp_v4_scaler.pkl  pipeline_maps.pkl  shap_values_v4.pkl  split_instability_results.json  statistical_tests_v4.json  xgb_orig_v4.json  xgb_orig_v4.pkl
src/: __init__.py  config.py  evaluation.py  features.py  models.py  preprocessing.py  utils.py
(+59 files in other folders)
